--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,24 @@ header {
   width: auto;
   color: var(--basic-white);
   background-color: var(--basic-dark-blue);
+  z-index: 10;
+}
+
+.box-header label {
+  position: relative;
+  flex-grow: 1;
+}
+
+.box-header label::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 17px;
+  width: 17px;
+  height: 17px;
+  background-image: url(../img/icon/icon-search.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 .box-header a:not(:first-child) {
@@ -145,9 +163,9 @@ header {
 .header-logo {
 display: block;
 width: 220px;
+height: 100%;
 text-align: center;
-padding-top: 12px;
-padding-bottom: 12px;
+padding: 12px 57px 6px 55px;
 background-color: var(--basic-red);
 box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
 cursor: pointer;
@@ -158,6 +176,9 @@ cursor: pointer;
 }
 
 input[type="search"] {
+  width: 100%;
+  height: 100%;
+  padding-left: 42px;
   background-color: var(--basic-dark-blue);
   border: none;
 }
@@ -1218,6 +1239,7 @@ a.control-current {
 
 .catalog-sorting {
   display: flex;
+  justify-content: space-between;
   width: auto;
   margin-left: 20px;
   margin-bottom: 28px;
@@ -1239,10 +1261,12 @@ a.control-current {
   font-size: 13px;
   line-height: 18px;
   color: rgba(0, 0, 0, 0.3);
+  border-bottom: 1px dotted var(--basic-red);
 }
 
 .catalog-sorting a:hover {
-  color: var(--basic-black)
+  color: var(--basic-black);
+  border-bottom: 1px solid var(--basic-red);
 }
 
 .catalog-sorting a:active {
@@ -1252,10 +1276,37 @@ a.control-current {
 .sorting-list {
   display: flex;
   align-items: center;
+  width: 460px;
   margin: 0;
   padding: 0;
-  padding-left: 140px;
   list-style: none;
+}
+
+.sorting-price {
+  margin-right: 70px;
+}
+
+.sorting-tip {
+  margin-right: 65px;
+}
+
+.sorting-function {
+  margin-right: 46px;
+}
+
+.button-up a {
+  margin-right: 21px;
+  border: none;
+}
+
+.button-down a {
+  margin-right: 14px;
+  border: none;
+}
+
+.button-up a:hover svg,
+.button-down a:hover {
+  border: none;
 }
 
 /* Стили каталога/Список товаров*/
