--- a/css/style.css
+++ b/css/style.css
@@ -1737,37 +1737,61 @@ footer {
 }
 
 .feedback-form {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   background-color: var(--basic-white);
-  outline: 3px solid green;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
 }
 
 .feedback-item {
   margin: 0;
   padding: 0;
-  width: 220px;
-  outline: 5px solid red;
+  min-width: 220px;
 }
 
 .feedback-item:nth-child(1) {
+  grid-column: 1 / 2;
   margin-top: 46px;
-  margin-left: 81px;
+  margin-left: 80px;
 }
 
 .feedback-item:nth-child(2) {
+  grid-column: 2 / 3;
   margin-top: 46px;
-  margin-right: 81px;
+  margin-right: 80px;
 }
 
 .feedback-item:nth-child(3) {
-  width: 460px;
-  margin-top: 13px;
-  margin-left: 81px;
+  grid-column: 1 / 3;
+  margin: 13px 80px 37px;
+  width: auto;
 }
 
+.feedback-item label {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.feedback-item input {
+  display: block;
+  margin-top: 11px;
+  padding: 7px 8px 7px 12px;
+  width: 100%;
+  border: 2px solid var(--basic-gray);
+  border-radius: 2px;
+}
+
+.feedback-item textarea {
+  border: 2px solid var(--basic-gray);
+  border-radius: 2px;
+}
+
+/* .feedback-item input::placeholder {
+  padding: 7px 8px 7px 11px;
+} */
+
 .feedback-buttons {
+  grid-column: 1 / 3;
   padding: 37px 80px;
   background-color: #F4F4F4;
 }
