--- a/css/style.css
+++ b/css/style.css
@@ -1730,17 +1730,23 @@ footer {
 /* Модальные окна*/
 
 .modal-form {
-  position: absolute;
+  display: none;
+  position: fixed;
+  top: 25%;
+  left: 25%;
   width: 620px;
   background-color: var(--basic-white);
   border-top: 7px solid var(--basic-red);
 }
 
 .feedback-form {
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
+}
+
+.feedback-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: var(--basic-white);
-  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
+  padding: 40px 80px 37px 80px;
 }
 
 .feedback-item {
@@ -1751,20 +1757,17 @@ footer {
 
 .feedback-item:nth-child(1) {
   grid-column: 1 / 2;
-  margin-top: 46px;
-  margin-left: 80px;
 }
 
 .feedback-item:nth-child(2) {
   grid-column: 2 / 3;
-  margin-top: 46px;
-  margin-right: 80px;
+  margin-left: 20px;
 }
 
 .feedback-item:nth-child(3) {
   grid-column: 1 / 3;
-  margin: 13px 80px 37px;
   width: auto;
+  margin-top: 13px;
 }
 
 .feedback-item label {
@@ -1782,13 +1785,20 @@ footer {
 }
 
 .feedback-item textarea {
+  width: 100%;
+  margin-top: 11px;
+  padding-top: 7px;
+  padding-left: 12px;
   border: 2px solid var(--basic-gray);
   border-radius: 2px;
 }
 
-/* .feedback-item input::placeholder {
-  padding: 7px 8px 7px 11px;
-} */
+.feedback-item input::placeholder,
+.feedback-item textarea::placeholder {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+}
 
 .feedback-buttons {
   grid-column: 1 / 3;
@@ -1798,36 +1808,39 @@ footer {
 
 .feedback-buttons .link-button {
   display: inline-block;
-  width: auto;
+  width: 100%;
   margin: 0 auto;
+  padding: 10px 0;
+  border: none;
 }
 
 .button-close {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 14px;
+  right: 11px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
-/* .feedback-item label {
+/* Карта*/
+
+.modal-map {
+  position: fixed;
   display: block;
+  top: 30%;
+  left: 30%;
+  width: 943px;
+  height: 449px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 
-.feedback-item input {
-  display: block;
-  width: 100%;
-} */
-
-.modal-card {
-  display: none;
+.modal-map iframe {
+  border: none;
 }
+
+/* Корзина*/
 
 .catalog-basket {
-  display: none;
+  display: block;
 }
-
-/* Временные стили*/
-
-/*
-outline: 5px solid rgba(0, 255, 255, 0.3);
-outline-offset: -5px;
-*/
