--- a/css/style.css
+++ b/css/style.css
@@ -713,6 +713,7 @@ a.user-cabinet {
 }
 
 .features-slider-item {
+  display: none;
   position: relative;
   min-height: 266px;
 }
@@ -960,35 +961,15 @@ a.control-current {
   box-shadow: 0px 1px 0px var(--basic-white), inset 0px 1px 0px var(--basic-white);
 }
 
-.slider-wrapper {
-  margin-left: 80px;
-}
-
-.background-wrapper-1 {
-  background-image: url(../img/service-car-delivery.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
-}
-
-.background-wrapper-2 {
-  background-image: url(../img/service-guarantee-100.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
-}
-
-.background-wrapper-3 {
-  background-image: url(../img/service-credit.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
-}
-
  .services-slider-list {
   margin: 0;
+  margin-left: 80px;
   padding: 0;
   height: 100%;
 } 
 
 .services-slide-item {
+  display: none;
   height: 100%;
 }
 
@@ -1014,12 +995,26 @@ a.control-current {
   padding: 10px 30px;
 }
 
-.slide {
-  display: none;
-}
-
 .slide-current {
   display: block;
+}
+
+.services-delivery {
+  background-image: url(../img/service-car-delivery.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+.services-guarante {
+  background-image: url(../img/service-guarantee-100.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+.services-credit {
+  background-image: url(../img/service-credit.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
 }
 
 /* Секция о компании и контакты*/
@@ -1052,6 +1047,10 @@ a.control-current {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
+.company-title p:nth-child(3){
+  margin-top: 15px;
+}
+
 .contact p {
   margin-bottom: 32px;
 }
@@ -1059,13 +1058,28 @@ a.control-current {
 .railway-carriers {
   margin: 0;
   margin-bottom: 20px;
-
 }
 
 .railway-carriers li {
+  position: relative;
   font-size: 18px;
   line-height: 24px;
   list-style: none;
+}
+
+.railway-item::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: -35px;
+  width: 25px;
+  height: 2px;
+  background-color: var(--basic-red);
+}
+
+.railway-item:first-child,
+.railway-item:nth-child(2) {
+  margin-bottom: 12px;
 }
 
 .map-button {
@@ -1603,6 +1617,10 @@ a.control-current {
   border: 1px solid var(--border-button);
   border-radius: 2px;
   text-transform: uppercase;
+}
+
+.catalog-navigation li:not(:first-child) {
+  margin-left: 10px;
 }
 
 .button-navigation:hover,
