--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,26 @@ a {
   box-sizing: border-box;
 }
 
+.new-element {
+  display: none;
+  position: absolute;
+  top: 11px;
+  right: -27px;
+  margin: 0;
+  padding: 5px 40px;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: var(--basic-white);
+  background-color: var(--basic-red);
+  text-transform: uppercase;
+  transform: rotate(45deg);
+}
+
+.new-current {
+  display: block;
+}
+
 /* Стили шапки*/
 header {
   background-color: var(--basic-fon);
@@ -593,6 +613,7 @@ a.user-cabinet {
 
 .catalog-menu-item {
   position: relative;
+  overflow: hidden;
 }
 
 .catalog-menu-item h3 {
@@ -604,36 +625,6 @@ a.user-cabinet {
   line-height: 30px;
   font-weight: bold;
   color: var(--basic-white);
-}
-
-.catalog-menu-item:nth-child(1) svg {
-  position: absolute;
-  top: 31px;
-  right: 43px;
-}
-
-.catalog-menu-item:nth-child(2) svg {
-  position: absolute;
-  top: 34px;
-  right: 31px;
-}
-
-.catalog-menu-item:nth-child(3) svg {
-  position: absolute;
-  top: 31px;
-  right: 31px;
-}
-
-.catalog-menu-item:nth-child(5) svg {
-  position: absolute;
-  top: 26px;
-  right: 45px;
-}
-
-.catalog-menu-item:nth-child(6) svg {
-  position: absolute;
-  top: 32px;
-  right: 31px;
 }
 
 .catalog-menu-item a:not(.link-button) {
@@ -658,47 +649,62 @@ a.user-cabinet {
 .materials {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  background-image: url(../img/icon/icon-materials.svg);
+  background-repeat: no-repeat;
+  background-position: 80% 50%;
 }
 
 .tool {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   background-color: var(--basic-blue);
+  background-image: url(../img/icon/icon-tool.svg);
+  background-repeat: no-repeat;
+  background-position: 85% 50%;
+}
+
+.hummer-drill {
+  background-image: url(../img/man-and-hummer-drill.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.screwd-river {
+  background-image: url(../img/man-and-screwdriver.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .machinery {
   grid-column: 3 /4;
   grid-row: 1 / 2;
   background-color: var(--basic-light-purple);
+  background-image: url(../img/icon/icon-machinery.svg);
+  background-repeat: no-repeat;
+  background-position: 85% 50%;
 }
 
 .discount {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
   background-color: var(--basic-light-green);
+  background-image: url(../img/icon/icon-discount.svg);
+  background-repeat: no-repeat;
+  background-position: 80% 50%;
 }
 
 .delivery {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
+  background-image: url(../img/icon/icon-delivery.svg);
+  background-repeat: no-repeat;
+  background-position: 85% 50%;
 }
 
 .features-slider {
   grid-column: 1 /3;
   grid-row: 2 / 4;
   
-}
-
-.features-wrapper-1 {
-  background-image: url(../img/man-and-hummer-drill.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.features-wrapper-2 {
-  background-image: url(../img/man-and-screwdriver.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .features-slider-list {
@@ -756,28 +762,22 @@ a.user-cabinet {
   background-color: var(--basic-red);
 }
 
-.features-slide-wrapper .svg-first {
+.features-slider .button-arrow-left {
   position: absolute;
   top: 122px;
   left: 24px;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
 }
 
-.features-slide-wrapper .svg-last {
+.features-slider .button-arrow-right {
   position: absolute;
   top: 122px;
   right: 20px;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
-}
-
-.svg-first:hover path,
-.svg-last:hover path {
-  fill: var(--basic-red);
-}
-
-.svg-first:active path,
-.svg-last:active path {
-  fill: var(--basic-light-gray);
 }
 
 .button-item-menu {
@@ -1470,6 +1470,7 @@ a.control-current {
   font-family: "PT Sans","Arial", sans-serif;
   list-style: none;
   border: 1px solid var(--border-catalog);
+  overflow: hidden;
 }
 
 .product-item:hover .item-button {
@@ -1529,6 +1530,7 @@ a.control-current {
 
 .new-price {
   margin: 0;
+  margin-bottom: 21px;
   padding: 10px 44px 10px 32px;
   font-family: "Cuprum", "Arial", sans-serif;
   font-size: 17px;
@@ -1823,7 +1825,7 @@ footer {
 
 /* Форма обратной связи*/
 .modal-form {
-  display: block;
+  display: none;
   position: fixed;
   top: 40%;
   right: 0;
@@ -1921,7 +1923,7 @@ footer {
 /* Карта*/
 
 .modal-map {
-  display: block;
+  display: none;
   position: fixed;
   top: 30%;
   right: 0;
@@ -1939,7 +1941,7 @@ footer {
 /* Корзина*/
 
 .catalog-basket {
-  display: block;
+  display: none;
   position: fixed;
   top: 40%;
   right: 0;
