--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,9 @@ header {
   display: flex;
   justify-content: space-between;
   width: auto;
+  min-height: 42px;
   color: var(--basic-white);
   background-color: var(--basic-dark-blue);
-  z-index: 10;
 }
 
 .header-search {
@@ -218,7 +218,7 @@ input[type="search"]:focus + * .search-icon {
 .header-logo {
 display: block;
 width: 220px;
-height: 100%;
+height: 42px;
 text-align: center;
 padding: 12px 57px 6px 55px;
 background-color: var(--basic-red);
@@ -250,6 +250,7 @@ cursor: pointer;
   width: 150px;
   font-size: 18px;
   line-height: 24px;
+  font-weight: normal;
   color: var(--basic-white);
 }
 
@@ -330,18 +331,22 @@ cursor: pointer;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* width: 100%; */
   min-height: 158px;
 }
 
 .main-header h1 {
   margin: 0;
+  margin-left: 30px;
   font-size: 16px;
   line-height: 23px;
   font-weight: normal;
   font-style: italic;
   color: var(--basic-red);
 }
+
+/* .main-header-contact {
+  margin-left: 73px;
+} */
 
 .number-phone {
   position: relative;
@@ -383,6 +388,7 @@ cursor: pointer;
   justify-content: space-between;
   align-self: flex-start;
   margin-top: 41px;
+  margin-left: 69px;
 }
 
 .user-navigation a {
@@ -464,13 +470,13 @@ cursor: pointer;
   fill: #3D546F;
 }
 
-.user-cabinet {
+.my-room {
   margin: 0;
   padding: 0;
 }
 
 a.user-order,
-a.user-cabinet {
+a.my-room {
   font-size: 16px;
   line-height: 18px;
   background-color: var(--basic-fon);
@@ -536,6 +542,7 @@ a.user-cabinet {
 
 .site-navigation {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   margin: 0;
   margin-bottom: 60px;
@@ -910,12 +917,15 @@ a.user-cabinet {
   grid-column: 1 / -1;
 }
 
-.services-title p {
+.services-title p:nth-child(2) {
   margin: 0;
   margin-top: 25px;
-  margin-bottom: 75px;
 }
 
+.services-title p:nth-child(3) {
+  margin: 0;
+  margin-bottom: 75px;
+}
 
 .control-list {
   position: relative;
@@ -984,10 +994,13 @@ a.control-current {
 
 .services-slide-item p {
   margin: 0;
-  margin-top: 30px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
+}
+
+.services-slide-item p:nth-child(2) {
+  margin-top: 30px;
 }
 
 .services-slide-item a {
@@ -1109,7 +1122,7 @@ a.control-current {
 
 .breadcrumbs-list {
   display: flex;
-  margin-top: 29px;
+  margin-top: 21px;
   margin-bottom: 20px;
   padding: 0;
   list-style: none;
@@ -1644,11 +1657,29 @@ a.control-current {
 }
 /* Стили каталога/Текст*/
 
+.catalog-text {
+  background-color: var(--basic-fon);
+}
+
+.catalog-text h3 {
+  margin: 0;
+  padding-top: 64px;
+  padding-bottom: 25px;
+  font-family: "Cuprum", "Arial", sans-serif;;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: normal;
+}
+
 .catalog-text p {
-  margin-bottom: 68px;
+  margin: 0;
   font-family: "PT Sans","Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
+}
+
+.catalog-text p:last-child {
+  padding-bottom: 68px;
 }
 
 /* Стили подвала*/
