--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,14 @@
     url("../fonts/cuprum-v11-latin_cyrillic-regular.woff") format("woff");
 }
 
-/* Добавить Italic*/
+@font-face {
+  font-family: 'Cuprum';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Cuprum Italic'), local('Cuprum-Italic'),
+       url('../fonts/cuprum-v11-latin_cyrillic-italic.woff2') format('woff2'), 
+       url('../fonts/cuprum-v11-latin_cyrillic-italic.woff') format('woff'),
+}
 
 @font-face {
   font-family: "Cuprum";
@@ -99,11 +106,11 @@ a {
 
 .visually-hidden {
   position: absolute;
+  margin: -1px;
+  padding: 0;
   width: 1px;
   height: 1px;
-  margin: -1px;
   border: 0;
-  padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
@@ -121,10 +128,10 @@ a {
 .new-element {
   display: none;
   position: absolute;
-  top: 11px;
-  right: -27px;
+  top: 8px;
+  right: -30px;
   margin: 0;
-  padding: 5px 40px;
+  padding: 8px 40px 4px 40px;
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -148,10 +155,24 @@ header {
   display: flex;
   justify-content: space-between;
   width: auto;
-  min-height: 42px;
+  min-height: 41px;
   color: var(--basic-white);
   background-color: var(--basic-dark-blue);
 }
+
+.header-logo {
+  display: block;
+  padding: 12px 57px 6px 55px;
+  width: 220px;
+  text-align: center;
+  background-color: var(--basic-red);
+  box-shadow: 0 5px 0 0 #b52933;;
+  cursor: pointer;
+  }
+  
+.header-logo:active {
+  background-color: var(--basic-dark-red);
+  }
 
 .header-search {
   position: relative;
@@ -217,33 +238,11 @@ input[type="search"]:focus + * .search-icon {
   background-color: var(--basic-dark-blue);
 }
 
-.header-logo {
-display: block;
-width: 220px;
-height: 42px;
-text-align: center;
-padding: 12px 57px 6px 55px;
-background-color: var(--basic-red);
-box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
-cursor: pointer;
-}
-
-.header-logo:active {
-  background-color: var(--basic-dark-red);
-}
-
-
-/* .header-search:focus {
-  color: var(--basic-black);
-  background-color: var(--basic-white);
-} */
-
 .header-list {
   display: flex;
-  /* justify-content: space-between; */
-  width: 450px;
   margin: 0;
   padding: 0;
+  width: 450px;
   list-style: none;
 }
 
@@ -264,7 +263,7 @@ cursor: pointer;
 .header-basket::before {
   content: "";
   position: absolute;
-  top: 13px;
+  top: 12px;
   left: 26px;
   width: 15px;
   height: 15px;
@@ -332,31 +331,28 @@ cursor: pointer;
 .main-header {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 46px;
   min-height: 158px;
 }
 
 .main-header h1 {
   margin: 0;
-  margin-right: 93px;
+  margin-right: 95px;
+  width: 197px;
+  font-style: italic;
   font-size: 16px;
   line-height: 23px;
   font-weight: normal;
-  font-style: italic;
   color: var(--basic-red);
 }
-
-/* .main-header-contact {
-  margin-left: 73px;
-} */
 
 .number-phone {
   position: relative;
   margin: 0;
   margin-bottom: 3px;
-  padding: 7px 42px 8px 71px;
+  padding: 5px 42px 5px 70px;
   width: 270px;
-  height: auto;
   font-size: 21px;
   line-height: 30px;
   font-weight: bold;
@@ -367,8 +363,8 @@ cursor: pointer;
 .number-phone::before {
   content: "";
   position: absolute;
-  top: 13px;
-  left: 39px;
+  top: 10px;
+  left: 36px;
   width: 19px;
   height: 19px;
   background-image: url(../img/icon/icon-phone.svg);
@@ -378,7 +374,6 @@ cursor: pointer;
 
 .adress {
   margin: 0;
-  /* margin-top: 3px; */
   text-align: center;
   font-size: 14px;
   line-height: 24px;
@@ -389,7 +384,6 @@ cursor: pointer;
   display: flex;
   justify-content: space-between;
   align-self: flex-start;
-  margin-top: 41px;
   margin-left: 69px;
 }
 
@@ -404,7 +398,7 @@ cursor: pointer;
 
 .login {
   position: relative;
-  padding: 12px 27px 12px 47px;
+  padding: 12px 27px 12px 45px;
 }
 
 .login::before {
@@ -486,6 +480,7 @@ a.my-room {
 
 .authorized-user {
   flex-direction: column;
+  margin-left: 51px;
 }
 
 .authorized-user a {
@@ -544,7 +539,7 @@ a.my-room {
 
 .site-navigation {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
   margin: 0;
   margin-bottom: 60px;
@@ -553,14 +548,22 @@ a.my-room {
   box-shadow: inset 0px -5px 0px #293449;
 }
 
-.site-navigation li {
+.navigation-item {
   list-style: none;
 }
 
-.site-navigation a {
+.navigation-item a {
   display: block;
   width: auto;
   padding: 16px 28px 20px 28px;
+}
+
+.navigation-item:first-child a {
+  padding: 16px 31px 20px 52px;
+}
+
+.navigation-item:last-child a {
+  padding: 16px 43px 20px 33px;
 }
 
 /* Стили кнопок*/
@@ -583,7 +586,7 @@ a.my-room {
 }
 
 .button-filter {
-  padding: 10px 80px;
+  padding: 10px 79px;
   font-size: 13px;
   line-height: 18px;
   border: 1px solid var(--border-button);
@@ -596,9 +599,9 @@ a.my-room {
 .screwd-river-button {
   position: absolute;
   display: block;
-  left: 28px;
-  bottom: 31px;
-  padding: 10px 45px;
+  left: 24px;
+  bottom: 27px;
+  padding: 11px 46px 9px 46px;
 }
 
 /* Стили основного содержимого */
@@ -606,8 +609,8 @@ a.my-room {
 /* Стили основного содержимого/навигация по каталогу*/
 
 .features-catalog {
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: 59px;
+  margin-bottom: 58px;
 }
 
 .catalog-menu-list {
@@ -627,8 +630,8 @@ a.my-room {
 
 .catalog-menu-item h3 {
   margin: 0;
-  margin-top: 20px;
-  margin-left: 22px;
+  margin-top: 21px;
+  margin-left: 23px;
   padding: 0;
   font-size: 24px;
   line-height: 30px;
@@ -637,7 +640,7 @@ a.my-room {
 }
 
 .catalog-menu-item a:not(.link-button) {
-  margin: 14px 0 22px 22px;
+  margin: 14px 0 21px 23px;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
@@ -660,7 +663,7 @@ a.my-room {
   grid-row: 1 / 2;
   background-image: url(../img/icon/icon-materials.svg);
   background-repeat: no-repeat;
-  background-position: 80% 50%;
+  background-position: 83% 55%;
 }
 
 .tool {
@@ -669,7 +672,7 @@ a.my-room {
   background-color: var(--basic-blue);
   background-image: url(../img/icon/icon-tool.svg);
   background-repeat: no-repeat;
-  background-position: 85% 50%;
+  background-position: 87% 54%;
 }
 
 .hummer-drill {
@@ -825,7 +828,7 @@ a.my-room {
 }
 
 .popular-product-title h3 {
-  margin: 30px 0px 30px 30px;
+  margin: 29px 0px 30px 28px;
 }
 
 .popular-button-product {
@@ -855,17 +858,18 @@ a.my-room {
 }
 
 .popular-manufacturer-title h3 {
-  margin: 30px 0px 30px 30px;
+  margin: 29px 0px 30px 28px;
 }
 
 .popular-button-manufacturer {
   margin-right: 19px;
-  padding: 10px 40px;
+  padding: 11px 40px 9px 37px;
 }
 
 .manufacturer-list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 220px 220px 220px 220px;
+  grid-template-rows: 145px 145px;
   gap: 20px;
   margin: 0;
   padding: 0;
@@ -881,8 +885,8 @@ a.my-room {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 220px;
-  min-height: 145px;
+  width: 100%;
+  height: 100%;
 }
 
 .manufacturer-list li:hover {
@@ -906,6 +910,7 @@ a.my-room {
   padding: 0;
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
 }
 
@@ -919,20 +924,19 @@ a.my-room {
   grid-column: 1 / -1;
 }
 
-.services-title p:nth-child(2) {
+.services-title p {
   margin: 0;
   margin-top: 25px;
-}
-
-.services-title p:nth-child(3) {
-  margin: 0;
-  margin-bottom: 75px;
+  margin-bottom: 70px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 24px;
 }
 
 .control-list {
   position: relative;
   margin: 0;
-  margin-bottom: 99px;
+  margin-bottom: 100px;
   padding: 0;
   list-style: none;
 }
@@ -954,7 +958,7 @@ a.my-room {
   min-height: 61px;
   width: 240px;
   margin: 0;
-  padding: 14px 0 16px 22px;
+  padding: 14px 0 18px 22px;
   font-size: 21px;
   line-height: 30px;
   font-weight: bold;
@@ -987,8 +991,8 @@ a.control-current {
 
 .services-slide-item h4 {
   margin: 0;
-  font-size: 36px;
-  line-height: 24px;
+  font-size: 30px;
+  line-height: 30px;
   font-weight: normal;
   text-transform: uppercase;
   color: var(--basic-gulf-blue);
@@ -1048,9 +1052,10 @@ a.control-current {
 .company-title h3,
 .contact h3 {
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 23px;
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
 }
 
@@ -1063,16 +1068,21 @@ a.control-current {
 }
 
 .company-title p:nth-child(3){
-  margin-top: 15px;
+  margin-top: 28px;
 }
 
 .contact p {
   margin-bottom: 32px;
+  font-size: 13px;
+  line-height: 24px;
 }
 
 .railway-carriers {
   margin: 0;
+  margin-top: 6px;
   margin-bottom: 20px;
+  padding: 0;
+  padding-left: 37px;
 }
 
 .railway-carriers li {
@@ -1099,7 +1109,7 @@ a.control-current {
 
 .map-button {
   display: block;
-  margin-top: 25px;
+  margin-top: 28px;
   padding: 10px 0;
 }
 
@@ -1141,7 +1151,7 @@ a.control-current {
 
 .breadcrumbs-list li:not(:first-child) {
   position: relative;
-  padding-left: 40px;
+  padding-left: 41px;
 }
 
 .breadcrumbs-list a {
@@ -1181,14 +1191,16 @@ a.control-current {
   text-transform: uppercase;
   color: var(--basic-gulf-blue);
 }
+
 /* Стили каталога/Фильтры*/
 
 .filter-manufacturer {
   margin: 0;
-  margin-top: 18px;
+  margin-top: 16px;
   padding: 0;
+  padding-bottom: 7px;
   border: none;
-  border-bottom: 1px solid var(--basic-gray);
+  border-bottom: 1px solid var(--border-catalog);
 }
 
 .filter-power-supply {
@@ -1201,7 +1213,7 @@ a.control-current {
 .manufacturer-list-filter {
   margin: 0;
   padding: 0;
-  padding-top: 15px;
+  padding-top: 17px;
 }
 
 .catalog-filter {
@@ -1221,10 +1233,6 @@ a.control-current {
   list-style: none;
 }
 
-/* .catalog-filter fieldset {
-  border: none;
-} */
-
 .catalog-filter legend {
   font-size: 17px;
   line-height: 30px;
@@ -1236,8 +1244,7 @@ a.control-current {
   line-height: 19px;
 }
 
-.manufacturer-item-filter label,
-.power-supply-item label {
+.manufacturer-item-filter label {
   position: relative;
   display: block;
   margin-bottom: 20px;
@@ -1249,8 +1256,23 @@ a.control-current {
 .power-supply-list {
   margin: 0;
   padding: 0;
-  padding-top: 20px;
-  padding-bottom: 35px;
+  padding-top: 23px;
+}
+
+.power-supply-item label {
+  position: relative;
+  display: block;
+  padding-left: 35px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.power-supply-item:first-child label {
+  margin-bottom: 23px;
+}
+
+.power-supply-item:last-child label {
+  margin-bottom: 37px;
 }
 
 .filter-input-checkbox + label::before {
@@ -1260,21 +1282,23 @@ a.control-current {
   left: 0;
   width: 23px;
   height: 23px;
-  border: 3px solid var(--basic-gray);
-  border-radius: 3px;
-}
-
-.filter-input-checkbox:checked + label::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 27px;
-  height: 23px;
-  /*Пока вставил картинку*/
-  background-image: url(../img/icon/checkbox-on.svg);
+  background-image: url(..//img/icon/checkbox-off.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
+}
+
+.filter-input-checkbox:hover:not(:disabled) + label::before {
+  background-image: url(..//img/icon/checkbox-off-hover.svg);
+}
+
+.filter-input-checkbox:checked + label::before {
+  width: 27px;
+  height: 23px;
+  background-image: url(../img/icon/checkbox-on.svg);
+}
+
+.filter-input-checkbox:checked:hover:not(:disabled) + label::before {
+  background-image: url(..//img/icon/checkbox-on-hover.svg);
 }
 
 .filter-input-radio + label::before {
@@ -1284,33 +1308,31 @@ a.control-current {
   left: 0;
   width: 25px;
   height: 25px;
-  border: 5px solid var(--basic-gray);
-  border-radius: 50%;
+  background-image: url(..//img/icon/radio-off.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
-.filter-input-radio:checked + label::after {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  width: 9px;
-  height: 9px;
-  background-color: var(--basic-gray);
-  border-radius: 50%;
+.filter-input-radio:hover:not(:disabled) + label::before {
+  background-image: url(..//img/icon/radio-off-hover.svg);
 }
 
-.filter-input-radio:hover + label::before,
-.filter-input-radio:hover + label::after,
-.filter-input-checkbox:hover + label::before,
-.filter-input-checkbox:hover + label::after {
-  border-color: #b5b5b5;
+.filter-input-radio:checked + label::before {
+  background-image: url(..//img/icon/radio-on.svg);
+} 
+
+.filter-input-radio:checked:hover:not(:disabled) + label::before {
+  background-image: url(..//img/icon/radio-on-hover.svg);
 }
 
-.filter-input-radio:active + label::before,
-.filter-input-radio:active + label::after,
-.filter-input-checkbox:active + label::before,
-.filter-input-checkbox:active + label::after {
-  opacity: 0.3;
+.filter-input-checkbox:disabled + label,
+.filter-input-radio:disabled + label,
+.filter-input-checkbox:disabled + label::before,
+.filter-input-checkbox:checked:disabled + label::before,
+.filter-input-radio:disabled + label::before,
+.filter-input-radio:checked:disabled + label::before {
+  opacity: 0.4;
+  cursor: default;
 }
 
 /* Диапозон цены*/
@@ -1320,8 +1342,9 @@ a.control-current {
   margin-top: 15px;
   padding: 0;
   padding-bottom: 25px;
+  width: 100%;
   border: none;
-  border-bottom: 1px solid var(--basic-gray);
+  border-bottom: 1px solid var(--border-catalog);
 }
 
 .range-filter {
@@ -1370,8 +1393,9 @@ a.control-current {
 }
 
 .price-controls input {
-  width: 95px;
-  padding: 10px 24px;
+  width: 100%;
+  padding: 10px 13px 10px 28px;
+  text-align: center;
   background-color: var(--basic-light-grayish);
   border: none;
   border-radius: 5px;
@@ -1380,8 +1404,7 @@ a.control-current {
 .price-controls p {
   width: 30px;
   margin: 0;
-  padding: 0;
-  padding-top: 8px;
+  padding: 8px 7px 0 7px;
   font-size: 16px;
   line-height: 18px;
   text-align: center;
@@ -1493,13 +1516,17 @@ a.control-current {
   display: flex;
   position: relative;
   flex-direction: column;
-  justify-content: space-between;
-  min-height: 318px;
+  /* justify-content: space-between; */
   align-items: center;
+  min-height: 318px;
   font-family: "PT Sans","Arial", sans-serif;
   list-style: none;
   border: 1px solid var(--border-catalog);
   overflow: hidden;
+}
+
+.product-item:hover {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 
 .product-item:hover .item-button {
@@ -1514,12 +1541,14 @@ a.control-current {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 184px;
+  min-width: 220px;
   min-height: 164px;
 }
 
 .product-item h4 {
   margin: 0;
+  margin-top: 15px;
+  margin-bottom: 7px;
   font-size: 18px;
   line-height: 20px;
   font-weight: bold;
@@ -1527,7 +1556,6 @@ a.control-current {
 }
 
 .new-item {
-  /* position: absolute; */
   width: 100%;
   margin: 0;
   text-align: center;
@@ -1537,19 +1565,18 @@ a.control-current {
   background-color: var(--basic-red);
   text-transform: uppercase;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  /* transform: rotate(45deg); */
 }
 
 .item-button {
   display: none;
   position: absolute;
+  top: 0;
   text-align: center;
   background-color: var(--basic-white);
 }
 
 .old-price {
   margin: 0;
-  font-family: "Cuprum", "Arial", sans-serif;
   font-size: 17px;
   line-height: 18px;
   font-weight: bold;
@@ -1558,31 +1585,49 @@ a.control-current {
 }
 
 .new-price {
-  margin: 0;
-  margin-bottom: 21px;
+  align-self: start;
+  justify-self: flex-end;
+  margin: 0 33px 20px 44px;
   padding: 10px 44px 10px 32px;
-  font-family: "Cuprum", "Arial", sans-serif;
+  width: 141px;
   font-size: 17px;
   line-height: 18px;
   font-weight: bold;
   text-align: center;
   color: var(--basic-white);
-  background-color: var(--basic-red);
+  background: linear-gradient(-45deg, transparent 15px, var(--basic-red) 0)bottom right,
+              linear-gradient(225deg, transparent 15px, var(--basic-red) 0)top right;
+  background-size: 100% 50%;
+  background-repeat: no-repeat;            
   border-radius: 2px;
 }
 
 .button-buy {
+  position: relative;
   margin: 38px 43px 10px 40px;
   padding: 10px 40px 10px 53px;
   font-family: "Cuprum", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
+  color: var(--basic-white);
+  background-color: var(--basic-green);
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
-  color: var(--basic-white);
-  background-color: var(--basic-green);
   box-shadow: inset 0px -3px 0px var(--border-buy);
+  cursor: pointer;
+}
+
+.button-buy::before {
+  position: absolute;
+  content: "";
+  top: 10px;
+  left: 30px;
+  width: 15px;
+  height: 15px;
+  background-image: url(../img/icon/icon-cart.svg);
+  background-repeat: no-repeat;
+  opacity: 0.3;
 }
 
 .button-buy:hover {
@@ -1594,15 +1639,15 @@ a.control-current {
 }
 
 .button-marker {
-  padding: 10px 33px;
+  padding: 9px 32px 7px 31px;
   font-family: "Cuprum", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
+  color: var(--basic-gulf-blue);
+  background-color: var(--basic-white);
   text-transform: uppercase;
   border: 3px solid var(--basic-green);
   border-radius: 2px;
-  color: var(--basic-gulf-blue);
-  background-color: var(--basic-white);
 }
 
 .button-marker:hover {
@@ -1618,14 +1663,14 @@ a.control-current {
 .catalog-navigation {
   display: flex;
   grid-column: 2 / 3;
-  margin: 50px 0px 50px 20px;
+  margin: 45px 0px 59px 20px;
   padding: 0;
   list-style: none;
 }
 
 .button-navigation {
   display: block;
-  padding: 10px 15px;
+  padding: 9px 14px;
   font-size: 13px;
   line-height: 18px;
   color: var(--basic-black);
@@ -1649,14 +1694,15 @@ a.control-current {
   border: 1px solid var(--basic-red);
 }
 
- .next {
-   padding: 10px 31px;
+.next {
+  padding: 9px 30px;
 }
 
 .button-current {
   color: var(--basic-white);
   background-color: var(--basic-red);
 }
+
 /* Стили каталога/Текст*/
 
 .catalog-text {
@@ -1675,13 +1721,10 @@ a.control-current {
 
 .catalog-text p {
   margin: 0;
+  padding-bottom: 72px;
   font-family: "PT Sans","Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
-}
-
-.catalog-text p:last-child {
-  padding-bottom: 68px;
 }
 
 /* Стили подвала*/
@@ -1722,12 +1765,16 @@ footer {
 }
 
 .footer-address {
- margin-top: 22px;
- margin-bottom: 54px;
+  margin-top: 22px;
+  margin-bottom: 54px;
 }
 
 .footer-address p {
   margin: 0;
+  margin-left: 2px;
+  font-size: 18px;
+  line-height: 24px;
+  color: #F3F7F9;
 }
 
 .footer-right li {
@@ -1769,13 +1816,14 @@ footer {
 }
 
 .footer-navigation-bottom a:first-child {
-  margin-left: 15px;
+  margin-left: 24px;
 }
 
 .footer-navigation-top a,
 .footer-navigation-bottom a {
   font-size: 18px;
   line-height: 24px;
+  color: #F3F7F9;
 }
 
 .footer-navigation-bottom a {
@@ -1794,12 +1842,12 @@ footer {
 
 .footer-copyright,
 .footer-copyright a {
-  background-color: var(--basic-dark-blue);
   color: var(--basic-white);
+  background-color: var(--basic-dark-blue);
 }
 
 .footer-copyright p {
-  margin: 35px 0;
+  margin: 38px 0 34px 0;
   font-size: 16px;
   line-height: 18px;
 } 
@@ -1926,9 +1974,9 @@ footer {
 
 .feedback-item input {
   display: block;
+  width: 100%;
   margin-top: 11px;
   padding: 7px 8px 7px 12px;
-  width: 100%;
   border: 2px solid var(--basic-gray);
   border-radius: 2px;
 }
@@ -2043,9 +2091,9 @@ footer {
   padding: 10px 31px;
   font-size: 14px;
   line-height: 18px;
-  text-transform: uppercase;
   color: var(--basic-black);
   background-color: var(--basic-white);
+  text-transform: uppercase;
 }
 
 .basket-wrapper .button-basket:hover {
