--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@
 }
 
 @font-face {
-  font-family: 'Cuprum';
+  font-family: "Cuprum";
   font-style: italic;
   font-weight: 400;
-  src: local('Cuprum Italic'), local('Cuprum-Italic'),
-    url('../fonts/cuprum-v11-latin_cyrillic-italic.woff2') format('woff2'), 
-    url('../fonts/cuprum-v11-latin_cyrillic-italic.woff') format('woff'),
+  src: local("Cuprum Italic"), local("Cuprum-Italic"),
+    url("../fonts/cuprum-v11-latin_cyrillic-italic.woff2") format("woff2"), 
+    url("../fonts/cuprum-v11-latin_cyrillic-italic.woff") format("woff"),
 }
 
 @font-face {
@@ -631,7 +631,7 @@ a.my-room {
 }
 
 .catalog-menu-item a:not(.link-button) {
-  margin: 14px 0 21px 23px;
+  margin: 14px 0 20px 23px;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
@@ -829,7 +829,7 @@ a.my-room {
 }
 
 .popular-product-title h3 {
-  margin: 29px 0px 30px 28px;
+  margin: 30px 0px 30px 28px;
 }
 
 .popular-button-product {
@@ -1042,7 +1042,7 @@ a.control-current {
   display: flex;
   justify-content: space-between;
   padding-top: 70px;
-  padding-bottom: 70px;
+  padding-bottom: 69px;
 }
 
 .contact {
@@ -1069,7 +1069,7 @@ a.control-current {
 }
 
 .company-title p:nth-child(3){
-  margin-top: 28px;
+  margin-top: 27px;
 }
 
 .contact p {
@@ -1080,7 +1080,7 @@ a.control-current {
 
 .railway-carriers {
   margin: 0;
-  margin-top: 6px;
+  margin-top: 1px;
   margin-bottom: 20px;
   padding: 0;
   padding-left: 37px;
@@ -1542,14 +1542,12 @@ a.control-current {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 220px;
-  min-height: 164px;
+  width: auto;
+  min-height: 170px;
 }
 
 .product-item h4 {
   margin: 0;
-  /* margin-top: 15px;
-  margin-bottom: 7px; */
   font-size: 18px;
   line-height: 20px;
   font-weight: bold;
@@ -1761,7 +1759,7 @@ footer {
 
 .footer-logo a {
   display: block;
-  padding: 20px 41px;
+  padding: 20px 41px 17px 41px;
   background-color: var(--basic-red);
   box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
 }
@@ -1933,7 +1931,7 @@ footer {
 .modal-form {
   display: none;
   position: fixed;
-  top: 40%;
+  top: 20%;
   right: 0;
   left: 0;
   margin: auto;
