--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,7 @@ a.my-room {
   font-size: 14px;
   line-height: 18px;
   text-align: center;
-  vertical-align: middle;
+  vertical-align: top;
   text-transform: uppercase;
   color: var(--basic-white);
   background-color: var(--basic-red);
@@ -793,6 +793,7 @@ a.my-room {
   display: inline-block;
   margin: 113px 0 27px 24px;
   padding: 11px 46px 9px 46px;
+  vertical-align: top;
 }
 
 .button-item-menu {
@@ -2018,6 +2019,7 @@ footer {
   width: 100%;
   margin: 0 auto;
   padding: 10px 0;
+  vertical-align: top;
   border: none;
 }
 
@@ -2099,6 +2101,7 @@ footer {
   display: inline-block;
   margin-left: 3px;
   padding: 10px 31px;
+  vertical-align: top;
   font-size: 14px;
   line-height: 18px;
   color: var(--basic-black);
